@@ -1,5 +1,6 @@
 
 Development (next version)
+- Fixed a bug in the TRSM routine for alpha != 1
 - Performance reports are now external at https://cnugteren.github.io/clblast
 - Various minor fixes and enhancements
 - Added tuned parameters for various devices (see README)
